2010-06-28  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] dump frames in ascending alphabetical order of title

        https://bugs.webkit.org/show_bug.cgi?id=41261

        Unskip:
        http/tests/navigation/metaredirect-frames.html
        http/tests/navigation/redirect302-frames.html
        http/tests/navigation/redirect302-subframeload.html
        http/tests/navigation/timerredirect-frames.html

        * platform/qt/Skipped:

2010-06-28  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] dump bf history of child windows

        https://bugs.webkit.org/show_bug.cgi?id=41266

        Unskip http/tests/navigation/new-window-redirect-history.html

        * platform/qt/Skipped:

2010-06-28  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Index validation caches buffer size information too aggressively
        https://bugs.webkit.org/show_bug.cgi?id=41092

        * fast/canvas/webgl/index-validation-with-resized-buffer-expected.txt: Added.
        * fast/canvas/webgl/index-validation-with-resized-buffer.html: Added.
        * fast/canvas/webgl/resources/webgl-test.js:
        (assertMsg):
        (glErrorShouldBe):

2010-06-28  Sam Magnuson  <smagnuson@netflix.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayerQt delay seems unnecessary.
        https://bugs.webkit.org/show_bug.cgi?id=40846

        * compositing/animation/busy-indicator-no.png: Added.
        * compositing/animation/busy-indicator.html: Added.
        * compositing/animation/busy-indicator.png: Added.

2010-06-28  Mikhail Naganov  <mnaganov@chromium.org>

        Unreviewed test expectations update. Remove now passing fast/events/popup-allowed-from-gesture-initiated-form-submit.html

        * platform/chromium/test_expectations.txt:

2010-06-28  MORITA Hajime  <morrita@google.com>
