@@ -228,6 +228,7 @@ http/tests/navigation/javascriptlink-frames.html
 http/tests/navigation/javascriptlink-goback.html
 http/tests/navigation/javascriptlink-subframeload.html
 http/tests/navigation/lockedhistory-iframe.html
+http/tests/navigation/metaredirect-frames.html
 http/tests/navigation/metaredirect-goback.html
 http/tests/navigation/metaredirect-subframeload.html
 http/tests/navigation/no-referrer-reset.html
@@ -243,12 +244,15 @@ http/tests/navigation/postredirect-basic.html
 http/tests/navigation/postredirect-frames.html
 http/tests/navigation/postredirect-goback1.html
 http/tests/navigation/postredirect-goback2.html
+http/tests/navigation/redirect302-frames.html
+http/tests/navigation/redirect302-subframeload.html
 http/tests/navigation/relativeanchor-frames.html
 http/tests/navigation/reload-subframe-object.html
 http/tests/navigation/success200-frames-loadsame.html
 http/tests/navigation/success200-frames.html
 http/tests/navigation/success200-subframeload.html
 http/tests/navigation/target-frame-from-window.html
+http/tests/navigation/timerredirect-frames.html
 http/tests/navigation/timerredirect-goback.html
 http/tests/navigation/timerredirect-subframeload.html
 
