@@ -678,17 +678,9 @@ QString DumpRenderTree::dumpFramesAsText(QWebFrame* frame)
     result.append(QLatin1String("\n"));
 
     if (m_controller->shouldDumpChildrenAsText()) {
-        QMap<QString, QWebFrame *> map;
         QList<QWebFrame *> children = frame->childFrames();
         for (int i = 0; i < children.size(); ++i)
-            map.insert(children.at(i)->title(), children.at(i));
-
-        // dump the frames in ascending order of title, as per other DRTs
-        QMapIterator<QString, QWebFrame *> i(map);
-        while (i.hasNext()) {
-            i.next();
-            result += dumpFramesAsText(i.value());
-        }
+            result += dumpFramesAsText(children.at(i));
     }
 
     return result;
