@@ -1,5 +1,15 @@
 2010-06-28  Robert Hogan  <robert@webkit.org>
 
+        Unreviewed, rolling out r62021.
+        http://trac.webkit.org/changeset/62021
+        https://bugs.webkit.org/show_bug.cgi?id=41261
+
+        Broke http/navigation tests among other
+
+        * platform/qt/Skipped:
+
+2010-06-28  Robert Hogan  <robert@webkit.org>
+
         Reviewed by Kenneth Rohde Christiansen.
 
         [Qt] dump frames in ascending alphabetical order of title
